Fix align of searchbar and words

--- a/src/DefinitionCard/DefinitionCard.css
+++ b/src/DefinitionCard/DefinitionCard.css
@@ -1,6 +1,5 @@
 .card-direction{
   width: 70%;
-  margin-right: auto;
   padding: 20px;
   margin-left: auto;
 }
