--- a/src/SearchBar/SearchBar.css
+++ b/src/SearchBar/SearchBar.css
@@ -10,9 +10,8 @@
 }
 .word-input{
   height: 3rem;
-  width: 80%;
+  width: 50%;
   display: inline-block;
-  margin-left: 20px;
   margin-right: -20px;
   padding-left: 20px;
   font-size: 1.5rem;
